템플릿 신규로 변경 완료

--- a/docs/1_process/b_iso26262.md
+++ b/docs/1_process/b_iso26262.md
@@ -10,3 +10,11 @@ title: 윈도우 기능안전 대응
 |기간|수행내용|
 |---|---|
 |15년4월 ~ 16년3월|ISO26262 기능안전 대응|
+
+## ISO26262 시스템 설계
+
+* 시스템 요구사항 명세서 작성(Technical Safety Requirement)
+* 시스템 아키텍처 및 Safety Mechanism 설계
+* FMEA & FTA 수행을 통한 시스템 아키텍처 분석
+* 시스템 설계 명세서 작성(System Desgn Specification)
+
