--- a/docs/1_process/b_iso26262.md
+++ b/docs/1_process/b_iso26262.md
@@ -17,7 +17,7 @@ title: iso26262
 * 시스템 설계 명세서 작성(System Desgn Specification)
 
 
-## Sunroof 시스템 설계
+## 선루프 시스템 설계
 
 시뮬링크를 이용하여 아키텍처를 설계하고, 기능을 아키텍처에 <u>할당(allocation)</u>한다.
 
