이미지 확대 비활성화

--- a/docs/1_process/b_iso26262.md
+++ b/docs/1_process/b_iso26262.md
@@ -5,7 +5,7 @@ title: iso26262
 
 ---
 
-### ISO26262 시스템 설계
+## ISO26262 시스템 설계
 
 |기간|수행내용|
 |---|---|
@@ -15,6 +15,17 @@ title: iso26262
 * 시스템 아키텍처 및 Safety Mechanism 설계
 * FMEA & FTA 수행을 통한 시스템 아키텍처 분석
 * 시스템 설계 명세서 작성(System Desgn Specification)
+
+
+### Functional Architecture
+
+<p align="center">
+	<img
+		src={require('/img/1_process/process_iso26262_function_Architecture.png').default}
+		alt="Example banner"
+		width="350"
+	/>
+</p>
 
 
 ## 선루프 시스템 설계
