화면에 맞게 이미지 사이즈 자동조절 전체 적용

--- a/docs/1_process/b_iso26262.md
+++ b/docs/1_process/b_iso26262.md
@@ -20,11 +20,13 @@ title: iso26262
 ### Functional Architecture
 
 <p align="center">
-	<img
-		src={require('/img/1_process/process_iso26262_function_Architecture.png').default}
-		alt="Example banner"
-		width="350"
-	/>
+	<div class="box" >
+		<img
+			src={require('/img/1_process/process_iso26262_function_Architecture.png').default}
+			alt="Example banner"
+			width="350"
+		/>
+	</div>
 </p>
 
 
