--- a/docs/2_history/1_embed/3_linux/2_stm32f7.md
+++ b/docs/2_history/1_embed/3_linux/2_stm32f7.md
@@ -1,7 +1,15 @@
 ---
 id: stm32f7
-title: 2016 리눅스포팅
+title: 리눅스포팅
 ---
+
+<div align="right">
+  <font size="4">
+    2016 ~ <br/>
+		about 12 weeks (3 month)
+  </font>
+</div>
+
 ---
 
 IAP구헌 -> 추후 출입문제어기에 적용하였음
