--- a/docs/2_history/1_embed/3_linux/2_stm32f7.md
+++ b/docs/2_history/1_embed/3_linux/2_stm32f7.md
@@ -14,3 +14,26 @@ title: 리눅스포팅
 
 IAP구헌 -> 추후 출입문제어기에 적용하였음
 
+### 카드리더기 단말기 uCLinux/Linux 포팅 {#myembedded-linux-porting}
+
+12.10.01~13.09.30
+* 2440에 ARM9 Linux 포팅
+  * 기간 : 2011.11 ~ 2013.10 (사원 2년)
+  * 소속 : 한국후지제록스
+
+<p align="center">
+	<img
+		src={require('/img/3_embedded/img3_2_arm9_linux_porting.png').default}
+		width="450"
+		alt="Example banner"
+	/><br/><em>&lt;S3C2440 ARM9에 Embedded Linux 포팅&gt;</em>
+</p>
+
+### stm32f7에 uCLinux포팅(Self_Study) {#myembedded-linux-stm32f7}
+
+16.10.03~17.04.30
+* stm32f4-discovery에 uClinux 포팅
+* stm32f7-discovery에 uClinux 포팅
+
+포팅로그 이미지 추가
+
