이미지 크기 확대

--- a/docs/2_history/1_embed/3_linux/2_stm32f7.md
+++ b/docs/2_history/1_embed/3_linux/2_stm32f7.md
@@ -21,13 +21,13 @@ IAP구헌 -> 추후 출입문제어기에 적용하였음
   * 기간 : 2011.11 ~ 2013.10 (사원 2년)
   * 소속 : 한국후지제록스
 
-<p align="center">
+<div style={{width: '100%', textAlign: 'center'}}>
 	<img
 		src={require('/img/3_embedded/img3_2_arm9_linux_porting.png').default}
-		width="450"
+		style={{width: '100%'}}
 		alt="Example banner"
 	/><br/><em>&lt;S3C2440 ARM9에 Embedded Linux 포팅&gt;</em>
-</p>
+</div>
 
 ### stm32f7에 uCLinux포팅(Self_Study) {#myembedded-linux-stm32f7}
 
