프로젝트 기간 업데이트

--- a/docs/2_history/1_embed/3_linux/2_stm32f7.md
+++ b/docs/2_history/1_embed/3_linux/2_stm32f7.md
@@ -5,8 +5,7 @@ title: 리눅스 포팅
 
 <div align="right">
   <font size="4">
-    2016 ~ <br/>
-		about 12 weeks (3 month)
+    2012 ~ 2017<br/>
   </font>
 </div>
 
@@ -18,7 +17,13 @@ title: 리눅스 포팅
 * stm32f4-discovery에 uClinux 포팅
 * stm32f7-discovery에 uClinux 포팅
 
-포팅로그 이미지 추가
+<div style={{width: '100%', textAlign: 'center'}}>
+	<img
+		src={require('/img/3_embedded/stm32f4_linux.png').default}
+		style={{width: '100%'}}
+		alt="Example banner"
+	/>
+</div>
 
 ### 카드리더기 단말기 uCLinux/Linux 포팅 {#myembedded-linux-porting}
 
@@ -32,6 +37,6 @@ title: 리눅스 포팅
 		src={require('/img/3_embedded/img3_2_arm9_linux_porting.png').default}
 		style={{width: '100%'}}
 		alt="Example banner"
-	/><br/><em>&lt;S3C2440 ARM9에 Embedded Linux 포팅&gt;</em>
+	/><br/><em>&lt;ARM9(S3C2440) Linux 포팅&gt;</em>
 </div>
 
